--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:id="@+id/action_search"
-    android:title="string/menu_search"
-    android:icon="@drawable/ic_add_black" />
-<item android:id="@+id/action_settings"
-    android:title="string/menu_settings"
-    android:icon="@drawable/ic_add_black" />
-<item android:id="@+id/action_navigation"
-    android:title="string/menu_navigation"
-    android:icon="@drawable/ic_add_black" />
+<item android:id="@+id/actionFindFriends"
+    android:title="@string/find_friends"
+    android:icon="@drawable/ic_search_black_24dp" />
+<item android:id="@+id/actionViewMap"
+    android:title="@string/view_map"
+    android:icon="@drawable/ic_map_black_24dp" />
+<item android:id="@+id/actionExplore"
+    android:title="@string/explore"
+    android:icon="@drawable/ic_explore_black_24dp" />
 </menu>
