--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="size_label">36sp</dimen>
+    <dimen name="margin_plain_text">20dp</dimen>
+    <dimen name="margin_constraint_layout">55dp</dimen>
 </resources>
