--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -104,6 +104,33 @@
                     app:layout_constraintTop_toBottomOf="@+id/toFindFriendsButton"
                     app:layout_constraintBottom_toBottomOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_height="wrap_content"
+                android:layout_width="150dp">
+
+                <ImageButton
+                    android:id="@+id/toCameraButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@string/find_friends"
+                    android:scaleType="fitXY"
+                    app:layout_constraintBottom_toTopOf="@+id/toCameraLabel"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_camera_alt_black_24dp" />
+
+                <TextView
+                    android:id="@+id/toCameraLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/to_camera"
+                    android:textAlignment="center"
+                    android:padding="10dp"
+                    android:textSize="30sp"
+                    app:layout_constraintTop_toBottomOf="@+id/toCameraButton"
+                    app:layout_constraintBottom_toBottomOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </TableRow>
     </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
