--- a/app/src/main/res/layout/cell_post.xml
+++ b/app/src/main/res/layout/cell_post.xml
@@ -40,6 +40,7 @@
                 android:textColor="@color/common_google_signin_btn_text_dark_default"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                android:gravity="end"
                 tools:text="HangZhou, Zhejiang" />
 
             <TextView
@@ -70,22 +71,23 @@
 
             <TextView
                 android:id="@+id/textViewSignalType"
-                android:layout_width="wrap_content"
+                android:layout_width="108dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
                 android:textColor="@color/common_google_signin_btn_text_dark_default"
                 app:layout_constraintStart_toEndOf="@+id/textViewPeopleNum"
                 app:layout_constraintTop_toBottomOf="@+id/textViewLocation"
-                tools:text="fasdgaga" />
+                tools:text="Type: 道路结冰" />
 
             <TextView
                 android:id="@+id/textViewSignalLevel"
-                android:layout_width="wrap_content"
+                android:layout_width="108dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="208dp"
+                android:layout_marginEnd="16dp"
+                android:gravity="end"
                 android:textColor="@color/common_google_signin_btn_text_dark_default"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textViewSignalType"
