--- a/app/src/main/res/layout/activity_map_view.xml
+++ b/app/src/main/res/layout/activity_map_view.xml
@@ -11,28 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="17dp"
-        app:layout_constraintBottom_toTopOf="@+id/navigationInMapView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/navigationInMapView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_navigation_menu" />
-
     <androidx.cardview.widget.CardView
-        android:visibility="gone"
         android:id="@+id/mapViewMessageCard"
-        app:layout_constraintBottom_toTopOf="@+id/navigationInMapView"
-        android:layout_margin="40dp"
-        app:cardElevation="5dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="40dp"
+        android:visibility="gone"
+        app:cardElevation="5dp"
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="675dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cardWrapper"
@@ -45,30 +35,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:paddingVertical="5dp"
                 android:text="@string/app_name"
                 android:textSize="30sp"
-                android:paddingVertical="5dp"
-                app:layout_constraintTop_toTopOf="@+id/cardWrapper"/>
+                app:layout_constraintTop_toTopOf="@+id/cardWrapper" />
 
             <TextView
                 android:id="@+id/cardContent"
-                app:layout_constraintTop_toBottomOf="@+id/cardTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:paddingVertical="5dp"
                 android:text="@string/app_name"
                 android:textSize="14sp"
-                android:paddingVertical="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                app:layout_constraintTop_toBottomOf="@+id/cardTitle" />
 
             <Button
-                app:layout_constraintTop_toBottomOf="@+id/cardContent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 android:id="@+id/exitCardButton"
-                android:layout_gravity="center|bottom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/ok" />
+                android:layout_gravity="center|bottom"
+                android:text="@string/ok"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cardContent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
